--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Evarista Veliz</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
-      <h3>
+      <!-- <h3>
         <a href="https://rajshekhar26.github.io/cleanfolio-minimal" class="link"
           >RS.</a
         >
-      </h3>
+      </h3> -->
 
       <nav class="nav center">
         <ul class="nav__list center">
@@ -55,14 +55,10 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h1>Hi, I am  <span class="about__name">Evarista Veliz.</span></h1>
+        <h2 class="about__role">I like to code.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          A brief description about me
         </p>
 
         <div class="about__contact center">
@@ -71,7 +67,7 @@
           </a>
 
           <a
-            href="https://github.com/rajshekhar26"
+            href="https://github.com/eveliz15"
             aria-label="github"
             class="link link--icon"
           >
@@ -79,7 +75,7 @@
           </a>
 
           <a
-            href="https://linkedin.com/in/rajshekhar26"
+            href="https://linkedin.com/in/evarista-veliz"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -190,13 +186,8 @@
           <li class="skills__list-item btn btn--plain">CSS</li>
           <li class="skills__list-item btn btn--plain">SCSS</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
           <li class="skills__list-item btn btn--plain">CI/CD</li>
         </ul>
       </section>
@@ -204,7 +195,7 @@
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
+        <a href="mailto:velize559@gmail.com">
           <span class="btn btn--outline">Email me</span>
         </a>
       </section>
@@ -215,7 +206,7 @@
         href="https://github.com/rajshekhar26/cleanfolio-minimal"
         class="link footer__link"
       >
-        Created By Raj Shekhar
+        Template Provided By Raj Shekhar
       </a>
     </footer>
 
