Several changes and additions

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           </li>
         </ul>
 
-        <button type="button" aria-label="toggle theme" class="btn btn--icon">
+        <!-- <button type="button" aria-label="toggle theme" class="btn btn--icon">
           <i aria-hidden="true" id="btn-theme" class="fas fa-moon"></i>
-        </button>
+        </button> -->
 
         <button
           type="button"
@@ -55,14 +55,17 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am  <span class="about__name">Evarista Veliz.</span></h1>
+        <h1>Hi, I'm  <span class="about__name">Evarista Veliz.</span></h1>
         <h2 class="about__role">I like to code.</h2>
         <p class="about__desc">
-          A brief description about me
+          I'm a freelance developer made at Sacramento State. #StingersUp! With my education, on the job training
+          and experience I have accomplished my goal of becoming a confident programmer. Being introduced to programming 
+          during community college has challenged me to dig deeper into my weaknesses and strengths while learning a new
+          subject and falling in love with code.   
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+          <a href="Resources/Veliz_E_Resume.pdf">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -90,27 +93,26 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>Snoopy's Calculator</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Currently, creating a simple calculator to better understand the beginning stages of 
+              web application development. Specifically learning HTML and CSS.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">Java</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/eveliz15/calculator"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://eveliz15.github.io/calculator/"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -119,27 +121,28 @@
           </div>
 
           <div class="project">
-            <h3>Project 2</h3>
+            <h3>Wellness Web Application</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              A health & wellness web application providing users with tools for personal growth
+              within the 8 dimensions of wellness.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
+              <li class="project__stack-item">Java</li>
+              <li class="project__stack-item">JavaScript</li>
               <li class="project__stack-item">React</li>
+              <li class="project__stack-item">Heroku</li>
+              <li class="project__stack-item">SpringBoot</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/eveliz15/civic-duty-wellness"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://htmlephant.gitlab.io/"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -148,27 +151,49 @@
           </div>
 
           <div class="project">
-            <h3>Project 3</h3>
+            <h3>EDA - HoneyBees</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              An investigative insight to honeybees and possible causes of colony collapse disorder.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">Tableau</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/eveliz15/HoneyBeeEDA"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://eveliz15.github.io/HoneyBeeEDA/""
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="project">
+            <h3>Interactive Design</h3>
+            <p class="project__description">
+              An introduction to implementing interaction techniques through ObersvableHQ.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">HObservableHQ</li>
+            </ul>
+
+            <!-- <a
+              href="https://github.com/eveliz15/HoneyBeeEDA"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a> -->
+            <a
+              href="https://observablehq.com/@velize/interactive-design-project""
               aria-label="live preview"
               class="link link--icon"
             >
@@ -184,11 +209,16 @@
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">HTML</li>
           <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
           <li class="skills__list-item btn btn--plain">Git</li>
           <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <li class="skills__list-item btn btn--plain">MySQL</li>
+          <li class="skills__list-item btn btn--plain">PostgresQL</li>
+          <li class="skills__list-item btn btn--plain">Git</li>
+          <li class="skills__list-item btn btn--plain">Github</li>
+          <li class="skills__list-item btn btn--plain">JIRA</li>
+          <li class="skills__list-item btn btn--plain">Tableau</li>
         </ul>
       </section>
 
