adding new task list project

--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
         <h2 class="section__title">Projects</h2>
 
         <div class="projects__grid">
+          
           <div class="project">
             <h3>Snoopy's Calculator</h3>
             <p class="project__description">
-              Currently, creating a simple calculator to better understand the beginning stages of 
-              web application development. Specifically learning HTML and CSS.
+              Currently, creating a simple calculator to better understand HTML, CSS and JavaScript.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">HTML</li>
               <li class="project__stack-item">CSS</li>
-              <li class="project__stack-item">Java</li>
+              <li class="project__stack-item">JavaScript</li>
             </ul>
 
             <a
@@ -113,6 +113,33 @@
             </a>
             <a
               href="https://eveliz15.github.io/calculator/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+
+          <div class="project">
+            <h3>Task List 2022</h3>
+            <p class="project__description">
+              A task list to add, save, edit, and/or delete a task. CSS template by TylerPottsDev.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">HTML</li>
+              <li class="project__stack-item">CSS</li>
+              <li class="project__stack-item">JavaScript</li>
+            </ul>
+
+            <a
+              href="https://github.com/eveliz15/toDoList"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://eveliz15.github.io/toDoList/"
               aria-label="live preview"
               class="link link--icon"
             >
