--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="Resources/Veliz_E_Resume.pdf">
+          <a href="Resources/VelizEvaResume .pdf">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -93,7 +93,7 @@
 
         <div class="projects__grid">
           
-          <div class="project">
+          <!-- <div class="project">
             <h3>Snoopy's Calculator</h3>
             <p class="project__description">
               Currently, creating a simple calculator to better understand HTML, CSS and JavaScript.
@@ -118,7 +118,7 @@
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
-          </div>
+          </div> -->
 
           <div class="project">
             <h3>Task List 2022</h3>
@@ -258,14 +258,14 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <a
         href="https://github.com/rajshekhar26/cleanfolio-minimal"
         class="link footer__link"
       >
         Template Provided By Raj Shekhar
       </a>
-    </footer>
+    </footer> -->
 
     <div class="scroll-container">
     <div class="scroll-top">
