added videos, pages for in-depth information on each project

--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
         <h1>Hi, I'm  <span class="about__name">Evarista Veliz.</span></h1>
         <h2 class="about__role">I like to code.</h2>
         <p class="about__desc">
-          I'm a freelance developer made at Sacramento State. #StingersUp! With my education, on the job training
-          and experience I have accomplished my goal of becoming a confident programmer. Being introduced to programming 
-          during community college has challenged me to dig deeper into my weaknesses and strengths while learning a new
-          subject and falling in love with code.   
+          I'm a passionate computer science graduate with a bachelor's degree from CSU Sacramento (#StingersUp!). I have 
+          experience in software development, data analysis, and project management, and have become well-equipped to 
+          take on a variety of technical roles. I've collaborated on a range of projects, from web applications to 
+          data visualizations, and am commited to delivering quality work that will meet client needs. With a strong 
+          work ethic and a great desire to learn and grow, I am excited to take on new challenges, contribute to the 
+          computer science communtiy and make a positive impact wherever I go.
+          <!-- Learn More About Me... -->
         </p>
 
         <div class="about__contact center">
-          <a href="Resources/VelizEvaResume .pdf">
+          <a href="Resources/VelizEva2.pdf">
             <span class="btn btn--outline">Resume</span>
           </a>
 
@@ -121,9 +124,10 @@
           </div> -->
 
           <div class="project">
-            <h3>Task List 2022</h3>
+            <!-- TODO: Make card ("see more") clickable and link to page -->
+            <h3><a href="./Pages/taskList.html">Task List2022</a></h3>
             <p class="project__description">
-              A task list to add, save, edit, and/or delete a task. CSS template by TylerPottsDev.
+              This project is a simple task list application that allows users to add, save, edit, and delete tasks.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">HTML</li>
@@ -148,7 +152,7 @@
           </div>
 
           <div class="project">
-            <h3>Wellness Web Application</h3>
+            <h3><a href="./Pages/wellnessApplication.html">Wellness Web Application</a></h3>
             <p class="project__description">
               A health & wellness web application providing users with tools for personal growth
               within the 8 dimensions of wellness.
@@ -178,7 +182,7 @@
           </div>
 
           <div class="project">
-            <h3>EDA - HoneyBees</h3>
+            <h3><a href="./Pages/honeyBees.html">EDA - HoneyBees</a></h3>
             <p class="project__description">
               An investigative insight to honeybees and possible causes of colony collapse disorder.
             </p>
@@ -204,21 +208,14 @@
           </div>
 
           <div class="project">
-            <h3>Interactive Design</h3>
+            <h3><a href="./Pages/interactiveDesign.html">Interactive Design</a></h3>
             <p class="project__description">
               An introduction to implementing interaction techniques through ObersvableHQ.
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">HObservableHQ</li>
+              <li class="project__stack-item">ObservableHQ</li>
             </ul>
 
-            <!-- <a
-              href="https://github.com/eveliz15/HoneyBeeEDA"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a> -->
             <a
               href="https://observablehq.com/@velize/interactive-design-project""
               aria-label="live preview"
@@ -238,14 +235,14 @@
           <li class="skills__list-item btn btn--plain">CSS</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
+          <!-- <li class="skills__list-item btn btn--plain">CI/CD</li> -->
           <li class="skills__list-item btn btn--plain">MySQL</li>
           <li class="skills__list-item btn btn--plain">PostgresQL</li>
           <li class="skills__list-item btn btn--plain">Git</li>
           <li class="skills__list-item btn btn--plain">Github</li>
           <li class="skills__list-item btn btn--plain">JIRA</li>
           <li class="skills__list-item btn btn--plain">Tableau</li>
+          <li class="skills__list-item btn btn--plain">VS Code</li>
         </ul>
       </section>
 
